<resources>
    <string name="app_name">To Value Me</string>
    <string name="app_tag_line">To Value Me</string>
    <string name="app_tag">Purpose-Driven Dating Starts Here.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="game_view_content_description">Game View</string>
    <string name="dummyName">Denise Beamon</string>
    <string name="dummyTxt">25 dates &amp; other experiences so far</string>
    <string name="dummyDate">July 1</string>
    <string name="dummyDay">1st day </string>
    <string name="dummyLongTxt">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.

The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="invitation_code">Invitation Code</string>
    <string name="no_account">Don\'t have an account? <b>Register</b></string>
    <string name="account_exist">Already have an account? <b>Login</b></string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="reset_email">Reset Password</string>
    <string name="reset_email_confirmation">Please check your email after submitting the email address.</string>
    <string name="invite">Have an invite text?</string>
    <string name="sign_in">Sign in</string>
    <string name="create_account">Create Account</string>
    <string name="account_terms">By tapping “Continue”, you agree to our Terms of Service. Learn how we process your data in our \nPrivacy Policy and Cookies Policy.</string>
    <string name="phone_number">What’s your phone number?</string>
    <string name="phone_content">“To Value Me” will send you a text with a verification code. Message and data rates may apply.</string>
    <string name="phone_warning">What if my number changes?</string>
    <string name="phone_entry">Your mobile number</string>
    <string name="phone_valid_number">Enter valid number</string>
    <string name="phone_verification">Enter your verification code</string>
    <string name="phone_no_code">Didn\'t get a code?</string>
    <string name="phonce_edit">Edit</string>
    <string name="phone_send_to">send to</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="upload_photo">Upload Profile Picture</string>
    <string name="vision_board">My Vision Board</string>
    <string name="date_night_catalog">My Date Night Catalog</string>
    <string name="life_rhythm">The Rhythm of My Life</string>
    <string name="check_it_out">Check it out</string>
    <string name="upload">Upload</string>
    <string name="level_one_invitation_code">Enter your invitation code</string>
    <string name="submit">Submit</string>
    <string name="continue_with_phone_number">Continue with phone number</string>
    <string name="experience">Experiences</string>
    <string name="experience_sub_title">I invite you to invest in 133 Experiences to ensure I feel seen &amp; heard by you.</string>
    <string name="experience_detail">To keep things interesting, think of our dating journey as a mutual scavenger hunt.</string>
    <string name="experience_dating_partner">Level 1 - Be My Dating Partner</string>
    <string name="level_two_invitation_quote">I am ready to grow from random ‘meet &amp; greets’ to a consistent dating journey</string>
    <string name="non_exclusive_partner_tv">Let’s become Non-Exclusive Dating Partners</string>
    <string name="complete_level_one">To Complete Level 1</string>
    <string name="complete_level_two">To Complete Level 2</string>
    <string name="complete_level_detail">\u2022 Share our Value Inventories \n\u2022 Curate Dates &amp; Other Experiences To Observe Our Answers \n\u2022 Share Our Observations</string>
    <string name="accept_invitation">Accept My Invitation</string>
    <string name="decline_invitation">Decline</string>
    <string name="primer_title">There is a lot to you.</string>
    <string name="primer_sub_title">Let’s find out exactly how much.</string>
    <string name="primer_basic_info">Enter basic information</string>
    <string name="primer_one_name_title">What’s your name?</string>
    <string name="primer_one_first_name">First name</string>
    <string name="primer_one_last_name">Last name</string>
    <string name="primer_one_email">What’s your email?</string>
    <string name="primer_one_email_terms">I do not wish to receive marketing communications about “To Value Me” products and services.</string>
    <string name="primer_one_password_title">Set a password</string>
    <string name="primer_one_password">password</string>
    <string name="primer_one_confirm_password">Confirm Password</string>
    <string name="primer_one_birthday_title">What’s your date of birth?</string>
    <string name="primer_one_birthday_age">Age</string>
    <string name="primer_one_age_confirm">Please confirm your info</string>
    <string name="primer_one_age_alert">This can’t be changed later</string>
    <string name="primer_one_notification_title">Always know what your dating partners know.</string>
    <string name="primer_one_notification_enable">Enable Notifications</string>
    <string name="primer_one_notification_disable">Disable Notifications</string>
    <string name="primer_one_years_old">years old</string>
    <string name="primer_two_title">Your dating journey begins with you.</string>
    <string name="primer_two_preferences">Add details and preferences</string>
    <string name="primer_two_upload_photo">Upload your profile photo</string>
    <string name="primer_two_photo_condition">1 image is required</string>
    <string name="primer_two_photo_title">Upload Image</string>
    <string name="primer_two_location">Where do you live?</string>
    <string name="primer_iii_title"><b>Level 1</b>\nInvite your matches to a guided journey of mutual  discovery.</string>
    <string name="primer_iii_sub_title">Level 1 is a commitment to deciding if the next level is worth it or not.</string>
    <string name="primer_iii_inventory">Take inventory of your life</string>
    <string name="primer_iii_tag">Does this mean my match and I are dating?</string>
    <string name="aesthetic_inventory_side_title">How much is there to my Aesthetic Side?</string>
    <string name="spiritual_inventory_side_title">How much is there to my Spiritual Side?</string>
    <string name="entertainment_inventory_side_title">How much is there to my Entertainment Side?</string>
    <string name="seual_inventory_side_title">How much is there to my Sexual Side?</string>
    <string name="emotional_inventory_side_title">How much is there to my Emotional Side?</string>
    <string name="intellect_inventory_side_title">How much is there to my Intellectual Side?</string>
    <string name="professional_inventory_side_title">How much is there to my Professional Side?</string>
    <string name="village_inventory_side_title">How much is there to my Village Side?</string>
    <string name="inventory_side">Sides</string>
    <string name="inventory_continue">Continue</string>
    <string name="inventory_what_means">What does it all mean?</string>
    <string name="inventory_update">Update Inventory of My Life</string>
    <string name="inventory_life_title">Inventory of My Life</string>
    <string name="inventory_life_sub_title">Click the button below for the side of yourself that you’d like to update</string>
    <string name="inventory_what_important">Why is this important?</string>
    <string name="back">Back</string>
    <string name="primer_two_availability_title">What’s your availability to go out on dates?</string>
    <string name="primer_two_availability_subtitle">Check the days of the week that you are available on average</string>
    <string name="primer_two_availability_monday">Monday</string>
    <string name="primer_two_availability_tuesday">Tuesday</string>
    <string name="primer_two_availability_wednesday">Wednesday</string>
    <string name="primer_two_availability_thursday">Thursday</string>
    <string name="primer_two_availability_friday">Friday</string>
    <string name="primer_two_availability_saturday">Saturday</string>
    <string name="primer_two_availability_sunday">Sunday</string>
    <string name="primer_two_availability_all">I’m available 7 days-a-week</string>
    <string name="primer_four_title">Understanding the Possibilities</string>
    <string name="primer_four_review_my_value">Review My Value</string>
    <string name="primer_four_app_tag">Welcome to Purpose-Driven Dating</string>
    <string name="primer_four_sub_title">52 Weeks in a year. \n\n104 dates &amp; other experiences are available if you are willing to see your dating partner 2 times a week.\n\n365 experiences per year await you and your potential marriage partner.</string>
    <string name="primer_four_tvu_title">There’s a lot to Aliya, you have over</string>
    <string name="primer_four_review">Review Dating Quickstart Guide</string>
    <string name="primer_four_personality_sub_title">Your <b>Village</b> is where your heart it !\n\nGoing out &amp; experiencing the <b>Entertainment</b> of the world is next!\n\n<b>Aesthetically,</b>  you have a lot of flare you’d like you partner to take notice of!</string>
    <string name="primer_four_understand_personality">Understanding You Personality</string>
    <string name="primer_four_personality_facet">Total Personality Facets</string>
    <string name="primer_four_guide_text">experiences are needed for you to feel seen &amp; heard </string>
    <string name="primer_four_guide">Review the recommendations for your dating partners to explore your life</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_home">Home</string>
    <string name="nav_notification">Notifications</string>
    <string name="nav_fav">Favorite</string>
    <string name="howAboutYouAndMe">How about you &amp; me</string>
    <string name="send">SEND</string>
    <string name="details">Details*</string>
    <string name="upcoming_plans">Upcoming Plans</string>
    <string name="done">Done</string>
    <string name="unavailable_block_scheduler">Unavailable Block Scheduler</string>
    <string name="title_tv">Title*</string>
    <string name="start_time">Start Time*</string>
    <string name="end_time">End Time*</string>
    <string name="note">Note</string>
    <string name="description_unavailable">This will show you as unavailable for Date Nights in all of your dating partner\'s calendars.</string>
    <string name="enter_start_time">Enter Start Time</string>
    <string name="enter_end_time">Enter End Time</string>
    <string name="enter_title">Enter Title</string>
    <string name="destination">Destination*</string>
    <string name="url">Url</string>
</resources>