<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transGray"
    tools:context="com.tovalue.me.ui.dashboard.upcomingplans.dialog.AddPersonalEventDialog">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_16sdp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/back_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            android:tint="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/header_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/howAboutYouAndMe"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/back_btn"
            app:layout_constraintTop_toBottomOf="@+id/back_btn" />

        <TextView
            android:id="@+id/header_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/howAboutYouAndMe"
            android:textColor="@color/black"
            android:textSize="@dimen/_21ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/back_btn"
            app:layout_constraintTop_toBottomOf="@+id/header_title" />


        <TextView
            android:id="@+id/destination_title_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_14sdp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/destination"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="@id/header_title"
            app:layout_constraintStart_toStartOf="@id/header_title"
            app:layout_constraintTop_toBottomOf="@id/header_tv" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/destination_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/dummyName"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintEnd_toEndOf="@id/header_title"
            app:layout_constraintStart_toStartOf="@id/header_title"
            app:layout_constraintTop_toBottomOf="@+id/destination_title_tv" />


        <TextView
            android:id="@+id/start_time_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/start_time"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="@id/header_title"
            app:layout_constraintStart_toStartOf="@id/header_title"
            app:layout_constraintTop_toBottomOf="@id/destination_tv" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/start_time_text"
            android:layout_width="0dp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@drawable/round_bg"
            android:gravity="center_vertical"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/enter_start_time"
            app:layout_constraintEnd_toEndOf="@id/header_title"
            app:layout_constraintStart_toStartOf="@id/header_title"
            app:layout_constraintTop_toBottomOf="@+id/start_time_tv" />

        <TextView
            android:id="@+id/end_time_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/end_time"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="@id/header_title"
            app:layout_constraintStart_toStartOf="@id/header_title"
            app:layout_constraintTop_toBottomOf="@id/start_time_text" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/end_time_text"
            android:layout_width="0dp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:background="@drawable/round_bg"
            android:gravity="center_vertical"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/enter_end_time"
            app:layout_constraintEnd_toEndOf="@id/header_title"
            app:layout_constraintStart_toStartOf="@id/header_title"
            app:layout_constraintTop_toBottomOf="@+id/end_time_tv" />


        <TextView
            android:id="@+id/url_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_6sdp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/url"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="@dimen/_17ssp"
            app:layout_constraintEnd_toEndOf="@id/header_title"
            app:layout_constraintStart_toStartOf="@id/header_title"
            app:layout_constraintTop_toBottomOf="@+id/end_time_text" />

        <TextView
            android:id="@+id/url_title_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/dummyTxt"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintEnd_toEndOf="@id/header_title"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/header_title"
            app:layout_constraintTop_toBottomOf="@id/url_title" />

        <TextView
            android:id="@+id/detail_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/details"
            android:textColor="@color/black"
            android:textSize="@dimen/_17ssp"
            app:layout_constraintEnd_toEndOf="@id/header_title"
            app:layout_constraintStart_toStartOf="@id/header_title"
            app:layout_constraintTop_toBottomOf="@+id/url_title_tv" />

        <TextView
            android:id="@+id/details_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/description_unavailable"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintEnd_toEndOf="@id/header_title"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/header_title"
            app:layout_constraintTop_toBottomOf="@id/detail_title" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/send_btn"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@drawable/btn_round_corner_bg"
            android:text="@string/send"
            android:textColor="@color/black"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="@id/header_title"
            app:layout_constraintTop_toBottomOf="@id/details_tv" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>